<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MasarefFragments.NewAccountLoginInfoFragment"
    android:weightSum="1">

    <ImageView
        android:layout_width="@dimen/inside_activity_logo_width"
        android:layout_height="@dimen/inside_activity_logo_height"
        android:id="@+id/imgView_new_account_login_info_fragment_logo"
        android:layout_weight="0.09"
        android:src="@mipmap/ic_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_account_login_info_fragment_title"
        android:id="@+id/txtView_new_account_login_info_fragment_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/new_account_login_info_username"
        android:ems="10"
        android:id="@+id/etxtView_new_account_login_info_username"
        android:layout_weight="0.09" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/new_account_login_info_password"
        android:ems="10"
        android:id="@+id/etxtView_new_account_login_info_password"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:text="@string/new_account_login_info_email"
        android:id="@+id/etxtView_new_account_login_info_email"
        android:layout_weight="0.09" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text="@string/new_account_login_info_mobile"
        android:ems="10"
        android:id="@+id/etxtView_new_account_login_info_mobile"
        android:layout_weight="0.09" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_account_login_info_secret_question_one"
        android:id="@+id/etxtView_new_account_login_info_secret_question_one"
        android:layout_weight="0.09" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_account_login_info_secret_question_two"
        android:id="@+id/etxtView_new_account_login_info_secret_question_two"
        android:layout_weight="0.09" />

</LinearLayout>
