<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MasarefFragments.NewAccountUserInfoFragment"
    android:weightSum="1">


    <ImageView
        android:layout_width="@dimen/inside_activity_logo_width"
        android:layout_height="@dimen/inside_activity_logo_height"
        android:id="@+id/imgView_new_account_user_info_fragment_logo"
        android:layout_weight="0.09"
        android:src="@mipmap/ic_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_account_user_info_fragment_title"
        android:id="@+id/txtView_new_account_user_info_fragment_title" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/lstView_new_account_user_info_fragment_country" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/new_account_user_info_fragment_first_name"
        android:ems="10"
        android:id="@+id/etxtView_new_account_user_info_fragment_first_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/new_account_user_info_fragment_last_name"
        android:ems="10"
        android:id="@+id/etxtView_new_account_user_info_fragment_last_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_account_user_info_fragment_occupation"
        android:id="@+id/etxtView_new_account_user_info_fragment_occupation" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_account_user_info_fragment_organization"
        android:id="@+id/etxtView_new_account_user_info_fragment_organization" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:text="@string/new_account_user_info_fragment_dob"
        android:ems="10"
        android:id="@+id/etxtView_new_account_user_info_fragment_dob" />
</LinearLayout>
