<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MasarefActivities.SignUpActivity"
    tools:showIn="@layout/activity_sign_in"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <ImageView
        android:layout_width="@dimen/inside_activity_logo_height"
        android:layout_height="@dimen/inside_activity_logo_height"

        android:id="@+id/imgView_sign_in_activity_logo"
        android:src="@mipmap/ic_logo"
        android:layout_weight="0.09" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_in_activity_welcome_title"
        android:id="@+id/txtView_sign_in_activity_welcome_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/sign_in_activity_username"
        android:ems="10"
        android:id="@+id/txtEdit_sign_in_activity_username"
        android:focusable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/sign_in_activity_password"
        android:ems="10"
        android:id="@+id/txtPass_sign_in_activity_password" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_activity_keep_sign_in"
        android:id="@+id/swtch_sign_in_activity_keep_me_sign_in" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_activity_sign_in"
        android:id="@+id/btn_sign_in_activity_sign_in"
        android:onClick="singInHandler"/>

    <ImageView
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/imgView_sign_in_need_help"
        android:src="@drawable/ic_sign_in_help"
        android:onClick="needHelp"
        android:layout_weight="0.15" />


</LinearLayout>
