<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.masaref.bahez.masaref.MasarefFragments.RecoverAccountRegisteredEmail">


    <ImageView
        android:layout_width="@dimen/inside_activity_logo_width"
        android:layout_height="@dimen/inside_activity_logo_height"
        android:id="@+id/imgView_recover_account_registered_email_logo"
        android:src="@mipmap/ic_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/txtView_recover_account_registered_email_title"
        android:id="@+id/txtView_recover_account_registered_email_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/txtView_recover_account_registered_email_message"
        android:id="@+id/txtView_recover_account_registered_email_message" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/etxtView_recover_account_registered_email_input_email"
        android:id="@+id/etxtView_recover_account_registered_email_input_email" />
</LinearLayout>
