<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MasarefActivities.WelcomeActivity"
    tools:showIn="@layout/activity_welcome">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/loadingLogo"
        android:paddingTop="50dp"
        android:src="@mipmap/ic_logo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_activity_title"
        android:id="@+id/txtView_welcome_activity_welcome_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_activity_message"
        android:id="@+id/txtView_welcome_activity_welcome_message" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingLeft="50dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:onClick="signUpHandler">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imgView_welcome_activity_create_account"
                android:src="@drawable/ic_welcome_new_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_activity_create_account"
                android:id="@+id/txtView_welcome_activity_create_account"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:onClick="signUpWithFacebook">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/igmView_welcome_activity_sign_up_with_facebook"
                android:src="@drawable/ic_welcome_new_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_activity_sign_up_with_facebook"
                android:id="@+id/txtView_welcome_activity_sign_up_with_facebook"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:onClick="signInHandler">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imgView_welcome_activity_sign_in"
                android:src="@drawable/ic_welcome_new_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_activity_sign_in"
                android:id="@+id/txtView_welcome_activity_sign_in"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
